--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ add_executable(Practica_1B "Practica 1/Practica_1B.cpp")
 set_target_properties(Practica_1B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 1/")
 add_executable(Practica_1C "Practica 1/Practica_1C.cpp")
 set_target_properties(Practica_1C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 1/")
-add_executable(Ejercicio_2A "Practica 2/Ejercicio_2A.cpp" "Practica 2/Ejercicio_2B.cpp")
+add_executable(Ejercicio_2A "Practica 2/Ejercicio_2A.cpp" "Practica 2/Ejercicio_2B.cpp" "Practica 2/Ejercicio_3C.cpp")
 set_target_properties(Ejercicio_2A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
 add_executable(Ejercicio_2B "Practica 2/Ejercicio_2B.cpp")
 set_target_properties(Ejercicio_2B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
+add_executable(Ejercicio_3C "Practica 2/Ejercicio_3C.cpp")
+set_target_properties(Ejercicio_3C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
