--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,12 @@ add_executable(Practica_1B "Practica 1/Practica_1B.cpp")
 set_target_properties(Practica_1B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 1/")
 add_executable(Practica_1C "Practica 1/Practica_1C.cpp")
 set_target_properties(Practica_1C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 1/")
-add_executable(Ejercicio_2A "Practica 2/Ejercicio_2A.cpp" "Practica 2/Ejercicio_2B.cpp" "Practica 2/Ejercicio_2C.cpp" "Practica 2/Ejercicio_2D.cpp" "Practica 2/Ejercicio_2E.cpp" "Practica 2/Ejercicio_2F.cpp" "Practica 2/Ejercicio_2G.cpp")
+add_executable(Ejercicio_2A "Practica 2/Ejercicio_2A.cpp" "Practica 2/Ejercicio_2B.cpp" "Practica 2/Ejercicio_2C.cpp" "Practica 2/Ejercicio_2D.cpp" "Practica 2/Ejercicio_2E.cpp" "Practica 2/Ejercicio_2F.cpp" "Practica 2/Ejercicio_2G.cpp" "Practica 3/Ejercicio_3A.cpp" "Practica 3/Ejercicio_3B.cpp" "Practica 3/Ejercicio_3C.cpp" "Practica 3/Ejercicio_3D.cpp" "Practica 3/Ejercicio_3E.cpp")
 set_target_properties(Ejercicio_2A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
 add_executable(Ejercicio_2B "Practica 2/Ejercicio_2B.cpp")
 set_target_properties(Ejercicio_2B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
-add_executable(Ejercicio_3C "Practica 2/Ejercicio_2C.cpp")
-set_target_properties(Ejercicio_3C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
+add_executable(Ejercicio_3C "Practica 3/Ejercicio_3C.cpp")
+set_target_properties(Ejercicio_3C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
 add_executable(Ejercicio_2D "Practica 2/Ejercicio_2D.cpp")
 set_target_properties(Ejercicio_2D PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
 add_executable(Ejercicio_2E "Practica 2/Ejercicio_2E.cpp")
@@ -30,3 +30,12 @@ add_executable(Ejercicio_2G "Practica 2/Ejercicio_2G.cpp")
 set_target_properties(Ejercicio_2G PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
 add_executable(Ejercicio_2C "Practica 2/Ejercicio_2C.cpp")
 set_target_properties(Ejercicio_2C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
+add_executable(Ejercicio_3A "Practica 3/Ejercicio_3A.cpp")
+set_target_properties(Ejercicio_3A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
+add_executable(Ejercicio_3B "Practica 3/Ejercicio_3B.cpp")
+set_target_properties(Ejercicio_3B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
+
+add_executable(Ejercicio_3D "Practica 3/Ejercicio_3D.cpp")
+set_target_properties(Ejercicio_3D PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
+add_executable(Ejercicio_3E "Practica 3/Ejercicio_3E.cpp")
+set_target_properties(Ejercicio_3E PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
